# dynamic-workflow-repl

./: .gitignore  README.md  pyproject.toml
docs/demos/investment-opportunities/: 01-session-timeline.md  04-verifier-decisions.md  05-convergence-and-resume.md  README.md
docs/demos/investment-opportunities/artifacts/: event-timeline.jsonl  plan-20260704-142802-8e87f907-round-1.json  session-runs.json  session.json  verification-20260704-135134-fc83a0f4-round-1-V1.json
docs/demos/session-20260705-190415-c9984f98/: 01-session-timeline.md  02-planner-decisions.md  03-worker-findings.md  04-verifier-decisions.md  05-convergence-and-resume.md  README.md  final-report.md
docs/demos/session-20260705-190415-c9984f98/artifacts/: event-timeline.jsonl  plan-20260705-190520-4b0da669-round-1.json  plan-20260705-192125-827258b5-round-1.json  plan-20260705-192125-827258b5-round-2.json  plan-20260705-192125-827258b5-round-3.json  session-runs.json  session.json  verification-20260705-190520-4b0da669-round-1-V1.json  verification-20260705-190520-4b0da669-round-1-V2.json  verifier-decisions.json  (+5 more)
docs/demos/分析当下潜在的投资机会/: 01-session-timeline.md  02-planner-decisions.md  03-worker-findings.md  README.md  final-report.md
dynamic_workflows_agent/: __init__.py  agents.py  cli.py  context.py  demo_pipeline.py  input_reader.py  llm.py  models.py  orchestrator.py  planner.py  repl.py  store.py  tools.py  ui.py  validator.py
tests/: test_dashboard.py  test_demo_pipeline.py  test_input_reader.py  test_llm.py  test_orchestrator.py  test_tools.py  test_validator.py
(+9 files in other folders)
