[project]
name = "dynamic-workflows-agent"
version = "0.1.0"
description = "Terminal agent that reproduces the core orchestration mechanics of Claude Code Dynamic Workflows."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
repl = ["prompt_toolkit>=3.0.0"]

[project.scripts]
dynamic-workflows-agent = "dynamic_workflows_agent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
